Update AuthController.java